favicon path fix

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Купить билет"
     />
+    <link rel="icon" href="%PUBLIC_URL%/purchase/favicon.ico">
     <title>Покупка билета</title>
   </head>
   <body>
